--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -9,20 +9,13 @@
   "author": "Lorenzo Sozio",
   "license": "ISC",
   "dependencies": {
-    "connect-mongo": "^3.0.0",
-    "connect-mongodb-session": "^2.2.0",
-    "connect-redis": "^4.0.2",
-    "cookie-parser": "^1.4.4",
-    "cookie-session": "^1.3.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
-    "helmet": "^3.21.0",
     "html": "^1.0.0",
-    "morgan": "^1.9.1",
     "mysql2": "^1.7.0",
-    "redis": "^2.8.0",
-    "session-file-store": "^1.3.1",
-    "util": "^0.12.1"
+    "querystring": "^0.2.0",
+    "url": "^0.11.0"
   }
 }
